[package]
name = "solana-libra-mempool"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
chrono = "0.4.7"
futures = "0.1.28"
futures-preview = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
num_cpus = "1.10.1"
lazy_static = "1.3.0"
lru-cache = "0.1.1"
prost = "0.5.0"
tokio = "0.1.22"
ttl_cache = "0.4.2"

solana-libra-mempool-shared-proto = { path = "mempool-shared-proto", version = "0.1.0" }
solana-libra-bounded-executor = { path = "../common/bounded-executor", version = "0.1.0" }
solana-libra-config = { path = "../config", version = "0.1.0" }
failure = { path = "../common/failure_ext", version = "0.1.0", package = "solana_libra_failure_ext" }
solana_libra_grpc_helpers = { path = "../common/grpc_helpers", version = "0.1.0" }
solana-libra-logger = { path = "../common/logger", version = "0.1.0" }
solana-libra-metrics = { path = "../common/metrics", version = "0.1.0" }
solana-libra-network = { path = "../network", version = "0.1.0" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
solana_libra_storage_client = { path = "../storage/storage_client", version = "0.1.0" }
solana-libra-types = { path = "../types", version = "0.1.0" }
solana_libra_vm_validator = { path = "../vm_validator", version = "0.1.0" }

[dev-dependencies]
rand = "0.6.5"
solana-libra-channel = { path = "../common/channel", version = "0.1.0" }
solana-libra-storage-service = { path = "../storage/storage-service", version = "0.1.0" }
solana-libra-types = { path = "../types", version = "0.1.0", features = ["testing"] }

[build-dependencies]
grpcio-compiler = { version = "0.5.0-alpha.2", default-features = false, features = ["prost-codec"] }
