[package]
name = "solana-libra-mempool"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra mempool"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
chrono = "0.4.7"
futures = "0.1.28"
futures-preview = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
num_cpus = "1.10.1"
lazy_static = "1.3.0"
lru-cache = "0.1.1"
prost = "0.5.0"
tokio = "0.1.22"
ttl_cache = "0.4.2"

solana-libra-mempool-shared-proto = { path = "mempool-shared-proto" }
solana-libra-bounded-executor = { path = "../common/bounded-executor" }
solana-libra-config = { path = "../config" }
failure = { path = "../common/failure_ext", package = "solana_libra_failure_ext" }
solana_libra_grpc_helpers = { path = "../common/grpc_helpers" }
solana-libra-logger = { path = "../common/logger" }
solana-libra-metrics = { path = "../common/metrics" }
solana-libra-network = { path = "../network" }
solana-libra-crypto = { path = "../crypto/crypto" }
solana_libra_storage_client = { path = "../storage/storage_client" }
solana-libra-types = { path = "../types" }
solana_libra_vm_validator = { path = "../vm_validator" }

[dev-dependencies]
rand = "0.6.5"
solana-libra-channel = { path = "../common/channel" }
solana-libra-storage-service = { path = "../storage/storage-service" }
solana-libra-types = { path = "../types", features = ["testing"] }

[build-dependencies]
grpcio-compiler = { version = "0.5.0-alpha.2", default-features = false, features = ["prost-codec"] }
