[package]
name = "solana-libra-network"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
build = "build.rs"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
lazy_static = "1.3.0"
parity-multiaddr = "0.5.0"
pin-utils = "=0.1.0-alpha.4"
prost = "0.5.0"
rand = "0.6.5"
tokio = "0.1.22"
tokio-timer = "0.2.10"
tokio-retry = "0.2.0"
unsigned-varint = { version = "0.2.2", features = ["codec"] }

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto" }
solana-libra-bounded-executor = { path = "../common/bounded-executor" }
solana-libra-channel = { path = "../common/channel" }
solana-libra-config = { path = "../config" }
solana-libra-crypto = { path = "../crypto/crypto" }
failure = { package = "solana_libra_failure_ext", path = "../common/failure_ext" }
solana-libra-logger = { path = "../common/logger" }
solana-libra-memsocket = { path = "memsocket" }
solana-libra-metrics = { path = "../common/metrics" }
solana-libra-netcore = { path = "netcore" }
solana-libra-noise = { path = "noise" }
solana-libra-prost-ext = { path = "../common/prost-ext" }
solana-libra-types = { path = "../types" }

[dev-dependencies]
criterion = "0.2.11"
solana_libra_socket_bench_server = { path = "socket_bench_server" }
solana-libra-crypto = { path = "../crypto/crypto", features = ["testing"] }
solana-libra-types = { path = "../types", features = ["testing"]}

[build-dependencies]
prost-build = "0.5.0"

[[bench]]
name = "socket_muxer_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
