[package]
name = "solana-libra-network"
version = "0.0.1-sol4"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra network"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
build = "build.rs"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
lazy_static = "1.3.0"
parity-multiaddr = "0.5.0"
pin-utils = "=0.1.0-alpha.4"
prost = "0.5.0"
rand = "0.7.0"
rand_core = { version = "0.5", default-features = false }
tokio = "0.1.22"
tokio-timer = "0.2.10"
tokio-retry = "0.2.0"
unsigned-varint = { version = "0.2.2", features = ["codec"] }

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto", version = "0.0.1-sol4" }
solana-libra-bounded-executor = { path = "../common/bounded-executor", version = "0.0.1-sol4" }
solana-libra-channel = { path = "../common/channel", version = "0.0.1-sol4" }
solana_libra_config = { path = "../config", version = "0.0.1-sol4" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4" }
failure = { package = "solana_libra_failure_ext", path = "../common/failure_ext", version = "0.0.1-sol4" }
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol4" }
solana-libra-memsocket = { path = "memsocket", version = "0.0.1-sol4" }
solana_libra_metrics = { path = "../common/metrics", version = "0.0.1-sol4" }
solana-libra-netcore = { path = "netcore", version = "0.0.1-sol4" }
solana-libra-noise = { path = "noise", version = "0.0.1-sol4" }
solana_libra_prost_ext = { path = "../common/prost-ext", version = "0.0.1-sol4" }
solana_libra_types = { path = "../types", version = "0.0.1-sol4" }

[dev-dependencies]
criterion = "0.2.11"
solana_libra_socket_bench_server = { path = "socket_bench_server", version = "0.0.1-sol4" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4", features = ["testing"] }
solana_libra_types = { path = "../types", version = "0.0.1-sol4", features = ["testing"]}

[build-dependencies]
prost-build = "0.5.0"

[[bench]]
name = "socket_muxer_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
