[package]
name = "solana_libra_state_synchronizer"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra state synchronizer"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rand = "0.6.5"
tokio = { version = "0.1.22", default-features = false }
prometheus = { version = "0.7.0", default-features = false }

solana-libra-config = { path = "../config" }
solana-libra-executor = { path = "../execution/executor" }
failure = { path = "../common/failure_ext", package = "solana_libra_failure_ext" }
solana-libra-logger = { path = "../common/logger" }
solana-libra-metrics = { path = "../common/metrics" }
solana-libra-network = { path = "../network" }
solana_libra_storage_client = { path = "../storage/storage_client" }
solana-libra-types = { path = "../types" }
solana_libra_vm_runtime = { path = "../language/vm/vm_runtime" }

[dev-dependencies]
bytes = "0.4.12"

solana-libra-config-builder = { path = "../config/config-builder" }
solana-libra-crypto = { path = "../crypto/crypto", features = ["testing"]}
parity-multiaddr = "0.5.0"
solana-libra-types = { path = "../types", features = ["testing"] }
solana_libra_vm_genesis = { path = "../language/vm/vm_genesis" }
solana_libra_transaction_builder = { path = "../language/transaction_builder" }
solana-libra-channel = { path = "../common/channel" }
