[package]
name = "solana_libra_state_synchronizer"
version = "0.0.1-sol"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra state synchronizer"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rand = "0.6.5"
tokio = { version = "0.1.22", default-features = false }
prometheus = { version = "0.7.0", default-features = false }

solana-libra-config = { path = "../config", version = "0.0.1-sol" }
solana-libra-executor = { path = "../execution/executor", version = "0.0.1-sol" }
failure = { path = "../common/failure_ext", version = "0.0.1-sol", package = "solana_libra_failure_ext" }
solana-libra-logger = { path = "../common/logger", version = "0.0.1-sol" }
solana-libra-metrics = { path = "../common/metrics", version = "0.0.1-sol" }
solana-libra-network = { path = "../network", version = "0.0.1-sol" }
solana_libra_storage_client = { path = "../storage/storage_client", version = "0.0.1-sol" }
solana-libra-types = { path = "../types", version = "0.0.1-sol" }
solana_libra_vm_runtime = { path = "../language/vm/vm_runtime", version = "0.0.1-sol" }

[dev-dependencies]
bytes = "0.4.12"

solana-libra-config-builder = { path = "../config/config-builder", version = "0.0.1-sol" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.0.1-sol", features = ["testing"]}
parity-multiaddr = "0.5.0"
solana-libra-types = { path = "../types", version = "0.0.1-sol", features = ["testing"] }
solana_libra_vm_genesis = { path = "../language/vm/vm_genesis", version = "0.0.1-sol" }
solana_libra_transaction_builder = { path = "../language/transaction_builder", version = "0.0.1-sol" }
solana-libra-channel = { path = "../common/channel", version = "0.0.1-sol" }
