[package]
name = "solana-libra-testsuite"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dev-dependencies]
lazy_static = "1.2.0"
num = "0.2.0"
num-traits = "0.2"
rust_decimal = "1.0.2"
statistical = "1"
rusty-fork = "0.2.1"

# In order to limit the potential waiting time for binaries to be built while
# running tests all binaries which are being tested under this solana-libra-testsuite
# should have their crates listed as dev-dependencies.
solana-libra-benchmark = { path = "../benchmark" }
cli = { path = "../client", package="solana-libra-client" }
solana_libra_canonical_serialization = { path = "../common/canonical_serialization", package="solana_libra_canonical_serialization" }
solana-libra-generate-keypair = { path = "../config/generate-keypair" }
libra-swarm = { path = "../libra-swarm", features = ["testing"]}
solana-libra-logger = { path = "../common/logger" }
solana-libra-config = { path = "../config" }
solana-libra-tools = { path = "../common/tools" }
solana-libra-crypto = { path = "../crypto/crypto" }
