[package]
name = "solana-libra-testsuite"
version = "0.0.1-sol3"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra testsuite"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dev-dependencies]
lazy_static = "1.2.0"
num = "0.2.0"
num-traits = "0.2"
rust_decimal = "1.0.2"
statistical = "1"
rusty-fork = "0.2.1"

# In order to limit the potential waiting time for binaries to be built while
# running tests all binaries which are being tested under this solana-libra-testsuite
# should have their crates listed as dev-dependencies.
solana-libra-benchmark = { path = "../benchmark", version = "0.0.1-sol3" }
cli = { path = "../client", version = "0.0.1-sol3", package="solana-libra-client" }
solana_libra_canonical_serialization = { path = "../common/canonical_serialization", version = "0.0.1-sol3", package="solana_libra_canonical_serialization" }
solana-libra-generate-keypair = { path = "../config/generate-keypair", version = "0.0.1-sol3" }
libra-swarm = { path = "../libra-swarm", version = "0.0.1-sol3", features = ["testing"]}
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol3" }
solana_libra_config = { path = "../config", version = "0.0.1-sol3" }
solana_libra_tools = { path = "../common/tools", version = "0.0.1-sol3" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol3" }
