[package]
name = "solana_libra_types"
version = "0.0.0-sol9"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra types"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.6.0"
byteorder = "1.3.2"
bytes = "0.4.12"
chrono = "0.4.7"
hex = "0.3.2"
itertools = "0.8.0"
lazy_static = "1.3.0"
logger = { path = "../common/logger", package = "solana_libra_logger", version = "0.0.0-sol9" }
proptest = "0.9"
proptest-derive = "0.1.0"
protobuf = "2.7"
radix_trie = "0.1.3"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
tiny-keccak = "1.5.0"

canonical_serialization = { path = "../common/canonical_serialization", package = "solana_libra_canonical_serialization", version = "0.0.0-sol9" }
crypto = { path = "../crypto/legacy_crypto", package = "solana_libra_crypto", version = "0.0.0-sol9" }
nextgen_crypto = { path = "../crypto/nextgen_crypto", package = "solana_libra_nextgen_crypto", version = "0.0.0-sol9" }
failure = { path = "../common/failure_ext", package = "solana_libra_failure_ext", version = "0.0.0-sol9" }
proptest_helpers = { path = "../common/proptest_helpers", package = "solana_libra_proptest_helpers", version = "0.0.0-sol9" }
proto_conv = { path = "../common/proto_conv", features = ["derive"], package = "solana_libra_proto_conv", version = "0.0.0-sol9" }

[build-dependencies]
build_helpers = { path = "../common/build_helpers", package = "solana_libra_build_helpers", version = "0.0.0-sol9" }

[dev-dependencies.nextgen_crypto]
features = ["testing"]
path = "../crypto/nextgen_crypto"
package = "solana_libra_nextgen_crypto"

[features]
default = []
testing = ["nextgen_crypto/testing"]
