[package]
name = "solana-libra-types"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bech32 = "0.6.0"
byteorder = { version = "1.3.2", default-features = false }
bytes = { version = "0.4.12", default-features = false }
chrono = { version = "0.4.7", default-features = false }
hex = { version = "0.3.2", default-features = false }
itertools = { version = "0.8.0", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
solana-libra-logger = { path = "../common/logger", version = "0.1.0" }
proptest = { version = "0.9.4", default-features = false }
proptest-derive = { version = "0.1.2", default-features = false }
prost = "0.5.0"
radix_trie = { version = "0.1.4", default-features = false }
rand = "0.6.5"
serde = { version = "1.0.99", default-features = false }
tiny-keccak = { version = "1.5.0", default-features = false }

solana_libra_canonical_serialization = { path = "../common/canonical_serialization", version = "0.1.0" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
failure = { path = "../common/failure_ext", version = "0.1.0", package = "solana_libra_failure_ext" }
solana_libra_proptest_helpers = { path = "../common/proptest_helpers", version = "0.1.0" }
num_enum = "0.4.1"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
solana-libra-prost-ext = { path = "../common/prost-ext", version = "0.1.0" }
serde_json = "1.0.40"
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["testing"] }

[features]
default = []
testing = ["solana-libra-crypto/testing"]
