[package]
name = "solana_libra_types"
version = "0.0.1-sol4"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra types"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.6.0"
byteorder = { version = "1.3.2", default-features = false }
bytes = { version = "0.4.12", default-features = false }
chrono = { version = "0.4.7", default-features = false }
hex = { version = "0.3.2", default-features = false }
itertools = { version = "0.8.0", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol4" }
proptest = { version = "0.9.4", default-features = false }
proptest-derive = { version = "0.1.2", default-features = false }
prost = "0.5.0"
radix_trie = { version = "0.1.4", default-features = false }
rand = "0.7.0"
serde = { version = "1.0.99", default-features = false }
tiny-keccak = { version = "1.5.0", default-features = false }

solana_libra_canonical_serialization = { path = "../common/canonical_serialization", version = "0.0.1-sol4" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4" }
failure = { path = "../common/failure_ext", version = "0.0.1-sol4", package = "solana_libra_failure_ext" }
solana_libra_proptest_helpers = { path = "../common/proptest_helpers", version = "0.0.1-sol4" }
num_enum = "0.4.1"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
solana_libra_prost_ext = { path = "../common/prost-ext", version = "0.0.1-sol4" }
serde_json = "1.0.40"
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4", features = ["testing"] }

[features]
default = []
testing = ["solana_libra_crypto/testing"]
