[package]
name = "solana-libra-admission-control-service"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra admission control service"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = "0.1.28"
futures03 = { version = "=0.3.0-alpha.19", package = "futures-preview" }
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
prost = "0.5.0"
lazy_static = "1.3.0"
structopt = "0.3.2"

solana_libra_admission_control_proto = { path = "../admission_control_proto" }
solana-libra-config = { path = "../../config" }
solana-libra-crypto = { path = "../../crypto/crypto" }
solana_libra_debug_interface = { path = "../../common/debug_interface" }
failure = { package = "solana_libra_failure_ext", path = "../../common/failure_ext" }
solana-libra-executable-helpers = { path = "../../common/executable-helpers" }
solana_libra_grpc_helpers = { path = "../../common/grpc_helpers" }
solana-libra-logger = { path = "../../common/logger" }
solana-libra-mempool = { path = "../../mempool" }
solana-libra-mempool-shared-proto = { path = "../../mempool/mempool-shared-proto" }
solana-libra-metrics = { path = "../../common/metrics" }
solana_libra_storage_client = { path = "../../storage/storage_client" }
solana-libra-types = { path = "../../types" }
solana_libra_vm_validator = { path = "../../vm_validator" }

solana-libra-storage-service = { path = "../../storage/storage-service", optional = true }
solana_libra_proptest_helpers = { path = "../../common/proptest_helpers", optional = true }
proptest = { version = "0.9.4", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
rand = "0.6.5"
solana-libra-storage-service = { path = "../../storage/storage-service" }
solana-libra-types = { path = "../../types", features = ["testing"] }
solana_libra_proptest_helpers = { path = "../../common/proptest_helpers" }
proptest = "0.9.4"

[features]
default = []
fuzzing = ["solana-libra-storage-service", "solana_libra_proptest_helpers", "proptest"]
