[package]
name = "solana-libra-admission-control-service"
version = "0.0.1-sol2"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra admission control service"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = "0.1.28"
futures03 = { version = "=0.3.0-alpha.19", package = "futures-preview" }
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
prost = "0.5.0"
lazy_static = "1.3.0"
structopt = "0.3.2"

solana_libra_admission_control_proto = { path = "../admission_control_proto", version = "0.0.1-sol2" }
solana_libra_config = { path = "../../config", version = "0.0.1-sol2" }
solana_libra_crypto = { path = "../../crypto/crypto", version = "0.0.1-sol2" }
solana_libra_debug_interface = { path = "../../common/debug_interface", version = "0.0.1-sol2" }
failure = { package = "solana_libra_failure_ext", path = "../../common/failure_ext", version = "0.0.1-sol2" }
solana-libra-executable-helpers = { path = "../../common/executable-helpers", version = "0.0.1-sol2" }
solana_libra_grpc_helpers = { path = "../../common/grpc_helpers", version = "0.0.1-sol2" }
solana_libra_logger = { path = "../../common/logger", version = "0.0.1-sol2" }
solana-libra-mempool = { path = "../../mempool", version = "0.0.1-sol2" }
solana-libra-mempool-shared-proto = { path = "../../mempool/mempool-shared-proto", version = "0.0.1-sol2" }
solana_libra_metrics = { path = "../../common/metrics", version = "0.0.1-sol2" }
solana_libra_storage_client = { path = "../../storage/storage_client", version = "0.0.1-sol2" }
solana_libra_types = { path = "../../types", version = "0.0.1-sol2" }
solana_libra_vm_validator = { path = "../../vm_validator", version = "0.0.1-sol2" }

solana-libra-storage-service = { path = "../../storage/storage-service", version = "0.0.1-sol2", optional = true }
solana_libra_proptest_helpers = { path = "../../common/proptest_helpers", version = "0.0.1-sol2", optional = true }
proptest = { version = "0.9.4", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
rand = "0.6.5"
solana-libra-storage-service = { path = "../../storage/storage-service", version = "0.0.1-sol2" }
solana_libra_types = { path = "../../types", version = "0.0.1-sol2", features = ["testing"] }
solana_libra_proptest_helpers = { path = "../../common/proptest_helpers", version = "0.0.1-sol2" }
proptest = "0.9.4"

[features]
default = []
fuzzing = ["solana-libra-storage-service", "solana_libra_proptest_helpers", "proptest"]
