[package]
name = "solana_libra_admission_control_service"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.1.28"
futures03 = { version = "=0.3.0-alpha.17", package = "futures-preview" }
grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
lazy_static = "1.3.0"
protobuf = "2.7"

admission_control_proto = { path = "../admission_control_proto", package = "solana_libra_admission_control_proto" }
config = { path = "../../config", package = "solana_libra_config" }
crypto = { path = "../../crypto/legacy_crypto", package = "solana_libra_crypto" }
debug_interface = { path = "../../common/debug_interface", package = "solana_libra_debug_interface" }
failure = { path = "../../common/failure_ext", package = "solana_libra_failure_ext" }
executable_helpers = { path = "../../common/executable_helpers", package = "solana_libra_executable_helpers" }
grpc_helpers = { path = "../../common/grpc_helpers", package = "solana_libra_grpc_helpers" }
logger = { path = "../../common/logger", package = "solana_libra_logger" }
mempool = { path = "../../mempool", package = "solana_libra_mempool" }
metrics = { path = "../../common/metrics", package = "solana_libra_metrics" }
proto_conv = { path = "../../common/proto_conv", package = "solana_libra_proto_conv" }
storage_client = { path = "../../storage/storage_client", package = "solana_libra_storage_client" }
types = { path = "../../types", package = "solana_libra_types" }
vm_validator = { path = "../../vm_validator", package = "solana_libra_vm_validator" }

[dev-dependencies]
assert_matches = "1.3.0"
storage_service = { path = "../../storage/storage_service", package = "solana_libra_storage_service" }

[build-dependencies]
build_helpers = { path = "../../common/build_helpers", package = "solana_libra_build_helpers" }
