[package]
name = "solana_libra_admission_control_service"
version = "0.0.0-sol11"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra admission_control_service"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.1.28"
futures03 = { version = "=0.3.0-alpha.17", package = "futures-preview" }
grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
lazy_static = "1.3.0"
protobuf = "2.7"

admission_control_proto = { path = "../admission_control_proto", package = "solana_libra_admission_control_proto", version = "0.0.0-sol11" }
config = { path = "../../config", package = "solana_libra_config", version = "0.0.0-sol11" }
crypto = { path = "../../crypto/legacy_crypto", package = "solana_libra_crypto", version = "0.0.0-sol11" }
debug_interface = { path = "../../common/debug_interface", package = "solana_libra_debug_interface", version = "0.0.0-sol11" }
failure = { path = "../../common/failure_ext", package = "solana_libra_failure_ext", version = "0.0.0-sol11" }
executable_helpers = { path = "../../common/executable_helpers", package = "solana_libra_executable_helpers", version = "0.0.0-sol11" }
grpc_helpers = { path = "../../common/grpc_helpers", package = "solana_libra_grpc_helpers", version = "0.0.0-sol11" }
logger = { path = "../../common/logger", package = "solana_libra_logger", version = "0.0.0-sol11" }
mempool = { path = "../../mempool", package = "solana_libra_mempool", version = "0.0.0-sol11" }
metrics = { path = "../../common/metrics", package = "solana_libra_metrics", version = "0.0.0-sol11" }
proto_conv = { path = "../../common/proto_conv", package = "solana_libra_proto_conv", version = "0.0.0-sol11" }
storage_client = { path = "../../storage/storage_client", package = "solana_libra_storage_client", version = "0.0.0-sol11" }
types = { path = "../../types", package = "solana_libra_types", version = "0.0.0-sol11" }
vm_validator = { path = "../../vm_validator", package = "solana_libra_vm_validator", version = "0.0.0-sol11" }

[dev-dependencies]
assert_matches = "1.3.0"
storage_service = { path = "../../storage/storage_service", package = "solana_libra_storage_service", version = "0.0.0-sol11" }

[build-dependencies]
build_helpers = { path = "../../common/build_helpers", package = "solana_libra_build_helpers", version = "0.0.0-sol11" }
